Git and Scene Update

--- a/.gitignore
+++ b/.gitignore
@@ -44,3 +44,7 @@ Icon?
 ehthumbs.db
 Thumbs.db
 Alien Annihilation - AoA/Library/
+Alien Annihilation - AoA/Temp/
+Alien Annihilation - AoA/Assets/AssetStoreTools*
+Alien Annihilation - AoA/Obj/
+Alien Annihilation - AoA/UnityGenerated/
